# whoopyy

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: WHOOP_API_COMPLIANCE.md
docs/audit/: 01_structure.md  02_api_coverage.md  03_oauth_tokens.md  04_test_coverage.md  05_code_quality.md  06_synthesis.md  07_elite_plan.md  BASELINE.md  INTEGRATION_RESULTS.md  PERF_RESULTS.md  PYPI_NAME_CHECK.md  baseline_mypy.txt  baseline_mypy_tests.txt  baseline_pytest.txt
examples/: async_example.py  basic_usage.py  data_export.py
scripts/: perf_check.py
src/: __init__.py  async_client.py  auth.py  client.py  constants.py  exceptions.py  export.py  logger.py  models.py  type_defs.py  utils.py
temp_web/: .env.example  .env.local.example  middleware.ts  package-lock.json  package.json
temp_web/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
temp_web/app/(auth)/: layout.tsx
temp_web/app/(auth)/callback/: page.tsx
temp_web/app/(auth)/login/: page.tsx
temp_web/app/dashboard/: layout.tsx  page.tsx
temp_web/app/dashboard/recovery/: page.tsx
temp_web/app/dashboard/settings/: page.tsx
temp_web/app/dashboard/sleep/: page.tsx
temp_web/components/auth/: AuthError.tsx  AuthLoadingScreen.tsx  DashboardSkeleton.tsx  SessionRefreshToast.tsx
temp_web/components/charts/: ChartLegend.tsx  CustomTooltip.tsx  LineChartComponent.tsx  RecoveryGauge.tsx  RecoveryTrendChart.tsx  SleepChart.tsx  StrainChart.tsx  WorkoutDistributionChart.tsx
temp_web/components/layout/: PageContainer.tsx  PageHeader.tsx  ProtectedRoute.tsx  TopNav.tsx  WidgetGrid.tsx
temp_web/components/shared/: EmptyState.tsx  Skeleton.tsx
temp_web/components/ui/: skeleton.tsx  spinner.tsx  status-badge.tsx
temp_web/components/widgets/: HRVTrendWidget.tsx  MetricWidget.tsx  MetricWidgetSkeleton.tsx  RecoveryWidget.tsx  SleepWidget.tsx  StrainWidget.tsx  WorkoutGridWidget.tsx
temp_web/types/: whoop.ts
tests/: conftest.py  test_async_client.py  test_auth.py  test_auth_coverage.py  test_client.py  test_constants.py  test_exceptions_coverage.py  test_export.py  test_export_coverage.py  test_logger_coverage.py  test_models.py  test_models_coverage.py  test_utils.py  test_utils_coverage.py
tests/integration/: test_real_api.py
(+11 files in other folders)
