[project]
name = "whoopyy"
version = "0.3.1"
description = "A complete Python SDK for the WHOOP Developer API"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Andrew Ponder", email = "raponder.business@gmail.com" }
]
keywords = ["whoop", "fitness", "health", "api", "sdk", "oauth", "wearable", "biometrics", "hrv", "recovery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "mypy", "httpx"]

[project.urls]
Homepage = "https://github.com/ponderrr/whoopyy"
Repository = "https://github.com/ponderrr/whoopyy"
"Bug Tracker" = "https://github.com/ponderrr/whoopyy/issues"
Changelog = "https://github.com/ponderrr/whoopyy/blob/main/CHANGELOG.md"
Documentation = "https://github.com/ponderrr/whoopyy#readme"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100
target-version = ["py39"]
